--- a/index.html
+++ b/index.html
@@ -2,13 +2,109 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Extrator de Grupos de WhatsApp - Cole o texto copiado e extraia os links de grupos do WhatsApp automaticamente.">
     <meta name="keywords" content="WhatsApp, grupos, links de grupos, extrator de links, JavaScript, Bootstrap">
     <meta name="author" content="Seu Nome">
     <title>Extrator de Grupos de WhatsApp</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            scrollbar-color: #28a745 #e9ecef;
+            scrollbar-width: thin;
+            cursor: default;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        :root {
+            --bg-color: #f8f9fa;
+            --text-color: #212529;
+            --header-bg-color: #28a745;
+            --textarea-bg-color: #fff;
+            --textarea-border-color: #ced4da;
+        }
+        [data-theme="dark"] {
+            --bg-color: #212529;
+            --text-color: #f8f9fa;
+            --header-bg-color: #343a40;
+            --textarea-bg-color: #495057;
+            --textarea-border-color: #6c757d;
+        }
+        header {
+            background-color: var(--header-bg-color);
+            padding: 2rem 0;
+            color: white;
+        }
+        section {
+            padding: 2rem 0;
+        }
+        textarea {
+            resize: none;
+            border-radius: 5px;
+            border: 1px solid var(--textarea-border-color);
+            background-color: var(--textarea-bg-color);
+            color: var(--text-color);
+        }
+        .btn-extract, .btn-primary, .btn-secondary {
+            border-radius: 5px;
+            padding: 0.5rem 1rem;
+            transition: background-color 0.3s ease;
+        }
+        .btn-extract {
+            background-color: #ffc107;
+            color: black;
+            border: none;
+        }
+        .btn-extract:hover {
+            background-color: #e0a800;
+        }
+        .btn-primary {
+            background-color: #007bff;
+            color: white;
+            border: none;
+        }
+        .btn-primary:hover {
+            background-color: #0056b3;
+        }
+        .btn-secondary {
+            background-color: #6c757d;
+            color: white;
+            border: none;
+        }
+        .btn-secondary:hover {
+            background-color: #5a6268;
+        }
+        .output {
+            background-color: #e9ecef;
+            padding: 1rem;
+            border-radius: 5px;
+            border: 1px solid var(--textarea-border-color);
+            position: relative;
+        }
+        .hidden {
+            display: none;
+        }
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #e9ecef;
+        }
+        ::-webkit-scrollbar-thumb {
+            background-color: #28a745;
+            border-radius: 10px;
+            border: 2px solid #e9ecef;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background-color: #218838;
+        }
+        .spinner-border {
+            width: 3rem;
+            height: 3rem;
+            border-width: 0.3em;
+        }
+    </style>
 </head>
 <body id="page-top">
     <header class="text-center">
@@ -16,8 +112,10 @@
             <h2>Extrator de Grupos de WhatsApp</h2>
             <button class="btn btn-secondary" onclick="toggleTheme()">Alternar Tema</button>
             <button class="btn btn-info" data-toggle="modal" data-target="#infoModal">Como Funciona</button>
+            <button class="btn btn-primary" data-toggle="modal" data-target="#loginModal">Login</button>
         </div>
     </header>
+
     <section id="about" class="text-center">
         <div class="container">
             <h2>Cole o Texto Copiado</h2>
@@ -48,6 +146,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Modal de Informações -->
     <div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="infoModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -82,8 +182,167 @@
             </div>
         </div>
     </div>
+
+    <!-- Modal de Login -->
+    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loginModalLabel">Login</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="loginEmail">Email</label>
+                            <input type="email" class="form-control" id="loginEmail" placeholder="Digite seu email">
+                        </div>
+                                               <div class="form-group">
+                            <label for="loginEmail">Email</label>
+                            <input type="email" class="form-control" id="loginEmail" placeholder="Digite seu email">
+                        </div>
+                        <div class="form-group">
+                            <label for="loginPassword">Senha</label>
+                            <input type="password" class="form-control" id="loginPassword" placeholder="Digite sua senha">
+                        </div>
+                        <button type="button" class="btn btn-primary" onclick="login()">Entrar</button>
+                        <button type="button" class="btn btn-secondary" onclick="showSignup()">Criar Conta</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal de Criação de Conta -->
+    <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="signupModalLabel">Criar Conta</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="signupEmail">Email</label>
+                            <input type="email" class="form-control" id="signupEmail" placeholder="Digite seu email">
+                        </div>
+                        <div class="form-group">
+                            <label for="signupPassword">Senha</label>
+                            <input type="password" class="form-control" id="signupPassword" placeholder="Digite sua senha">
+                        </div>
+                        <div class="form-group">
+                            <label for="signupConfirmPassword">Confirmar Senha</label>
+                            <input type="password" class="form-control" id="signupConfirmPassword" placeholder="Confirme sua senha">
+                        </div>
+                        <button type="button" class="btn btn-primary" onclick="signup()">Criar Conta</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="scripts.js" defer></script>
+    <script>
+        // Funções de login e criação de conta
+        function login() {
+            var email = document.getElementById("loginEmail").value;
+            var password = document.getElementById("loginPassword").value;
+            // Aqui você adiciona a lógica de autenticação (ex: chamada à API)
+            console.log("Tentativa de login com email: " + email + " e senha: " + password);
+        }
+
+        function showSignup() {
+            $('#loginModal').modal('hide');
+            $('#signupModal').modal('show');
+        }
+
+        function signup() {
+            var email = document.getElementById("signupEmail").value;
+            var password = document.getElementById("signupPassword").value;
+            var confirmPassword = document.getElementById("signupConfirmPassword").value;
+
+            if (password !== confirmPassword) {
+                alert("As senhas não coincidem!");
+                return;
+            }
+
+            // Aqui você adiciona a lógica de criação de conta (ex: chamada à API)
+            console.log("Tentativa de criação de conta com email: " + email + " e senha: " + password);
+        }
+
+        // Funções já existentes no seu script.js
+        function submeteHTML() {
+            var html = document.getElementById("entrada").value;
+            var arr3 = html.match(/chat.whatsapp.com\/([a-zA-Z0-9]*[a-zA-Z0-9])/g);
+            console.log(arr3);
+            document.getElementById("saida").value = "";
+            document.getElementById("saidaLink").innerHTML = "";
+
+            // Mostrar o indicador de carregamento
+            document.getElementById("loading").classList.remove("hidden");
+
+            // Simular atraso para feedback visual
+            setTimeout(() => {
+                if (arr3) {
+                    // Remover links duplicados
+                    arr3 = [...new Set(arr3)];
+                    arr3.forEach(preencherURL);
+                }
+
+                // Ocultar o indicador de carregamento
+                document.getElementById("loading").classList.add("hidden");
+            }, 1000); // Ajuste o tempo conforme necessário
+        }
+
+        function preencherURL(url) {
+            var sanitizedUrl = url.replace(/[<>]/g, ""); // Sanitização básica
+            document.getElementById("saida").value += "https://" + sanitizedUrl + '\r\n';
+            document.getElementById("saidaLink").innerHTML += 
+                "<a href='https://" + sanitizedUrl + "' target='_blank'>https://" + sanitizedUrl + "</a><br />";
+        }
+
+        function colarTexto() {
+            navigator.clipboard.readText().then(text => {
+                document.getElementById("entrada").value = text;
+            }).catch(err => {
+                console.error('Erro ao colar texto:', err);
+            });
+        }
+
+        function copiarTexto() {
+            var saida = document.getElementById("saida");
+            saida.select();
+            document.execCommand("copy");
+            mostrarFeedback();
+        }
+
+        function limparTudo() {
+            document.getElementById("entrada").value = "";
+            document.getElementById("saida").value = "";
+            document.getElementById("saidaLink").innerHTML = "";
+        }
+
+        function mostrarFeedback() {
+            var feedback = document.getElementById("feedback");
+            feedback.classList.remove("hidden");
+            setTimeout(() => {
+                feedback.classList.add("hidden");
+            }, 2000);
+        }
+
+        function toggleTheme() {
+            if (document.documentElement.getAttribute('data-theme') === 'dark') {
+                document.documentElement.removeAttribute('data-theme');
+            } else {
+                document.documentElement.setAttribute('data-theme', 'dark');
+            }
+        }
+    </script>
 </body>
 </html>
